force-app/main/default/objects/Quote/fields/Addons_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Addons_Revenue__c</fullName>
    <label>Addons Revenue</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <description>Rollup sum of addon line items revenue</description>
</CustomField>