force-app/main/default/objects/Quote/fields/Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount__c</fullName>
    <label>Discount Amount</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <formula>Line_Discount_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <description
  >Calculated discount amount: Sum of per-line discounts</description>
</CustomField>