force-app/main/default/objects/Quote/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
    <description>The end date of the quoting period.</description>
</CustomField>