force-app/main/default/objects/Quote/fields/Labor_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Labor_Revenue__c</fullName>
    <description>Rollup sum of labor line items revenue</description>
    <label>Resource Role Revenue</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>