force-app/main/default/objects/Quote/fields/Line_Discount_Total__c.field-meta.xml
<CustomField>
    <fullName>Line_Discount_Total__c</fullName>
    <label>Line Discount Total</label>
    <description
  >Total discount amount rolled up from all line items</description>
    <summarizedField>QuoteLineItem.Discount_Amount__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>