force-app/main/default/objects/Quote/fields/Margin_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Margin_Percentage__c</fullName>
    <label>Margin Percentage</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
    <description>Calculated margin percentage</description>
</CustomField>