force-app/main/default/objects/Quote/fields/Products_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Products_Revenue__c</fullName>
    <label>Products Revenue</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <description>Rollup sum of product line items revenue</description>
</CustomField>