force-app/main/default/objects/Quote/fields/Quote_Time_Period__c.field-meta.xml
<CustomField>
    <fullName>Quote_Time_Period__c</fullName>
    <label>Quote Time Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
                <default>true</default>
                <label>Months</label>
            </value>
            <value>
                <fullName>Quarters</fullName>
            </value>
            <value>
                <fullName>Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>