force-app/main/default/objects/Quote/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
    <description>The start date of the quoting period.</description>
</CustomField>