force-app/main/default/objects/Quote/fields/Total_Margin__c.field-meta.xml
<CustomField>
    <fullName>Total_Margin__c</fullName>
    <label>Total Margin</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <formula>TotalPrice - Total_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <description>Total margin: TotalPrice minus Total Cost</description>
</CustomField>