force-app/main/default/objects/Quote/validationRules/Cannot_Submit_Zero_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Submit_Zero_Value</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status, &apos;Pending Approval&apos;) &amp;&amp; (TotalPrice == 0 || ISNULL(TotalPrice))</errorConditionFormula>
    <errorMessage>Quote cannot be submitted for approval if total value is 0.</errorMessage>
</ValidationRule>