force-app/main/default/objects/Quote/validationRules/Start_Date_Cannot_Be_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Cannot_Be_Future</fullName>
    <active>false</active>
    <errorConditionFormula>Start_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start date of quote cannot be later than today.</errorMessage>
</ValidationRule>