force-app/main/default/objects/Quote/listViews/Draft_Quotes.listView-meta.xml
<ListView>
    <fullName>Draft_Quotes</fullName>
    <columns>QUOTE.NAME</columns>
    <columns>QUOTE.QUOTENUMBER</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>QUOTE.STATUS</columns>
    <columns>QUOTE.TOTALPRICE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QUOTE.STATUS</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>Draft Quotes</label>
</ListView>