force-app/main/default/objects/Quote/listViews/Pending_Approval_Quotes.listView-meta.xml
<ListView>
    <fullName>Pending_Approval_Quotes</fullName>
    <columns>QUOTE.NAME</columns>
    <columns>QUOTE.QUOTENUMBER</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>QUOTE.STATUS</columns>
    <columns>QUOTE.TOTALPRICE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QUOTE.STATUS</field>
        <operation>equals</operation>
        <value>Pending Approval</value>
    </filters>
    <label>Pending Approval Quotes</label>
</ListView>